--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-02-18  Kirit Sælensminde  <kirit@felspar.com>
+ Allow initialisation of a stream through a `unique_ptr`. This will get changed to a nicer syntax.
+
 2016-02-17  Kirit Sælensminde  <kirit@felspar.com>
  Stream JavaScript binding names are now generated from the typeid of the streams.
  All call backs now receive the value parameter as a `const &`.
