Implement the correct fix for the garbage collection of dead stream dependencies

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2016-04-24  Kirit Sælensminde  <kirit@felspar.com>
  Initial ideas for multi-threaded FRP using Boost ASIO reactor pools.
 
+2016-03-11  Kirit Sælensminde  <kirit@felspar.com>
+ Implement the correct fix for the garbage collection of dead stream dependencies.
+
 2016-03-10  Kirit Sælensminde  <kirit@felspar.com>
  Fix a bug where changes in the FRP graph would cause crashes in feedback cycles.
 
